# DeadManSwitch

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLOUD_RUN_DEPLOYMENT.md  DEPLOYMENT.md  Dockerfile  Dockerfile.api  Dockerfile.frontend  PLAN.md  README.md  TEST_PLAN.md  TEST_REPORT.md  cloudbuild.yaml  docker-compose.hybrid.yml  docker-compose.yml  firebase.json  package-lock.json  pyproject.toml  requirements.txt
app/: __init__.py
app/api/: routes.py
app/db/: __init__.py  (+2 more)
backend/: .gitignore  README.md  TEST_PLAN.md  pyproject.toml  requirements.txt
backend/app/: config.py  limiter.py  main.py
backend/app/api/: auth_bearer.py  routes.py
backend/app/db/: database.py  schema.py
backend/app/domain/: __init__.py  auth_provider.py  encryption.py  models.py  security.py  status.py
backend/app/notifications/: models.py
backend/app/notifications/adapters/: __init__.py  console.py  fcm.py  resend.py  smtp.py
backend/app/repositories/: auth_repo.py  checkin_repo.py  notification_repo.py
backend/app/scheduler/: jobs.py
backend/app/services/: auth_service.py  checkin_service.py  genai_service.py
backend/tests/: conftest.py  test_app_check.py  test_domain_status.py  test_encryption.py  test_fcm_notifications.py  test_genai_manual.py  test_integration_api.py  test_notifications.py  test_rate_limiting.py  test_recent_checkin_only.py
docs/: ADAPTIVE_REMINDERS_PLAN.md  DEPLOYMENT.md  HYBRID_DEPLOYMENT.md
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
tests/: test_integration_api.py  test_notifications.py
(+40 files in other folders)
