[project]
name = "deadmanswitch"
version = "0.1.0"
description = "Local-first Dead-Man Check-In system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "apscheduler>=3.10.4",
    "jinja2>=3.1.2",
    "python-dateutil>=2.8.2",
    "pytest>=7.4.0",
    "httpx>=0.27.0",
]
[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]